--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,4 +1,4 @@
-@app-background-color: #0684a0;
+@app-background-color: #284B63;
 @app-background-color-light: lighten(@app-background-color, 10.0%);
 @table-background: rgb(150,50,50);
 
