Feature: New background colour (#284B63 - DARK SLATE GRAY)

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #0684a0;
+  background-color: #284B63;
 }
 label {
   color: whitesmoke;
@@ -9,7 +9,7 @@ td {
   color: black;
 }
 .btn {
-  background-color: #08add1;
+  background-color: #376787;
   color: white;
 }
 .todo-table {
